Atualicacao botao comprar

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -25,6 +25,11 @@ a
 	font-style: bold;
 }
 
+.informacoes p
+{
+	color: grey;
+}
+
 @media screen and (max-width: 400px) and (min-width: 0px)
 {
 	#imglogotopo
