--- a/css/produto.css
+++ b/css/produto.css
@@ -155,6 +155,58 @@ h4
 	margin-left: 10px;
 }
 
+.name_search h6 {
+    text-align: center;
+	display: block;
+}
+
+.product-item .pi-pic {
+    position: relative;
+    display: block;
+}
+.pi-pic img {
+    max-width: 100%;
+}
+
+.product-item .pi-links {
+	width: 100%;
+	position: absolute;
+	right: 0;
+	bottom: 18px;
+	z-index: 9;
+	padding-right: 15px;
+	text-align: right;
+}
+.product-item .pi-links button {
+	display: inline-table;
+	width: 100px;
+	background: #fff;
+	line-height: 18px;
+	color: #000;
+	position: relative;
+	text-align: center;
+}
+
+.product-item .pi-text {
+    padding-top: 22px;
+    height: 87px;
+}
+.product-item .pi-text h6 {
+    float: right;
+    padding-left: 40px;
+    overflow: hidden;
+    font-weight: 700;
+    color: #111111;
+}
+.product-item .pi-text p {
+    font-size: 16px;
+    color: #111111;
+    margin-bottom: 0;
+}
+
+.pagination {
+	padding-top: 25px;
+}
 /*@media screen and (max-width: 500px) and (min-width: 0px)
 {
 	body{
